--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "homepage": "jwmann13.github.io/clicky-game",
   "name": "clicky-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "jwmann13.github.io/clicky-game",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.1",
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
@@ -35,7 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^2.2.0"
-  }
+  "devDependencies": {}
 }
