--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clicky-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "jwmann13.github.io/clicky-game/",
+  "homepage": "https://jwmann13.github.io/clicky-game/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
