--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jwmann13.github.io/",
+  "homepage": "https://jwmann13.github.io/clicky-game/",
   "name": "clicky-game",
   "version": "0.1.0",
   "private": true,
